Update data extraction